--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "formik": "^2.4.3",
     "i18next": "^23.4.9",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -18,6 +19,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "sass": "^1.66.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
