--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.4.3",
     "i18next": "^23.4.9",
     "i18next-browser-languagedetector": "^7.1.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
