--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "emoji-picker-react": "^4.12.0",
     "formik": "^2.4.3",
     "i18next": "^23.4.9",
     "i18next-browser-languagedetector": "^7.1.0",
