--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.1",
     "googleapis": "^126.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
